# assignment-test-cpp

./: .gitignore  CMakeLists.txt  README.md  assignment.conf  run-grading.sh
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  common.hpp  main.cpp
